--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: City Car Park
 email: cs@citycarpark.my
+cs_email: cs@citycarpark.my
+cs_phone: +603 4262 8672
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
