all function working.. next is to create each pages

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,5 +1,6 @@
 global:
   welcome: Welcome to
+  partner: Out Partner
 langs:
   ms: Malay
   en: English
@@ -9,3 +10,14 @@ menu:
   product: product
   operation: Operation
   contact: Contact
+menu_product:
+  cwt: CWT Terminal
+  app: Phone Payment
+  pas_bulanan: Digital Season Pass
+  petak_khas: Reserve Bay
+menu_operation:
+  terminal: Terminal Operation
+  pas_bulanan: Digital Season Pass
+  reserve_bay: Reseve Bay
+  compound: Compound
+  rate: Parking Rate
