--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,16 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-permalink: /:title
+# permalink: /:title
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://citycarpark.my" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kuntau
 github_username:  kuntau
 
 # Multi languages support
-languages: ["ms", "en"]
+languages: [ "ms", "en" ]
 # languages: ["en", "ms"]
-exclude_from_localizations: ["javascript", "images", "css", "assets"]
+exclude_from_localizations: [ "assets" ]
 
 # Build settings
 markdown: kramdown
