--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -23,3 +23,6 @@ menu:
     rate: Parking Rate
 image_path:
   jomparking: /assets/images/product/flow_jomparking_en.png
+  3step: /assets/images/product/3step_en.png
+  season_pass: /assets/images/product/season_pass_en.png
+  reserve_bay: /assets/images/product/reserve_bay_en.png
