--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,11 @@ email: cs@citycarpark.my
 cs_email: cs.mpjasin@citycarpark.my
 cs_phone: +606 529 1212
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Citycarpark is a Parking Solution for all the parking problems in Jasin.
 # permalink: /:title
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://mpjasin.citycarpark.my" # the base hostname & protocol for your site, e.g. http://example.com
+google_analytics: UA-100178704-3
 twitter_username: kuntau
 github_username:  kuntau
 
