fix rate, spelling, footer languange, embed map

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,6 +1,8 @@
 global:
   welcome: Welcome to
-  partner: Out Partner
+  partner: Our Partner
+  footer_text1: For more information please contact <b>citycarpark helpline</b>
+  footer_text2: or email our customer service
 langs:
   ms: Malay
   en: English
